--- a/webgl-app/index.html
+++ b/webgl-app/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ImmersiveScan.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ImmersiveScan.data.gz",
-        frameworkUrl: buildUrl + "/ImmersiveScan.framework.js.gz",
-        codeUrl: buildUrl + "/ImmersiveScan.wasm.gz",
+        dataUrl: buildUrl + "/ImmersiveScan.data",
+        frameworkUrl: buildUrl + "/ImmersiveScan.framework.js",
+        codeUrl: buildUrl + "/ImmersiveScan.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ImmersiveScan",
