--- a/webgl-app/index.html
+++ b/webgl-app/index.html
@@ -14,6 +14,7 @@
             background: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 10px;
+            z-index: 10; /* Ensure controls are on top */
         }
 
             #controls label {
